<resources>
    <string name="app_name">thResturent</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email or Number of table</string>
    <string name="login_password_hint">Password or scan password from table</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="phone">Phone</string>
    <string name="Name">Name</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="home">Home</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">About Us</string>
    <string name="interduce">We are Students in abour institution . we have learned the topics about programming and information system to benefit the society.</string>
    <string name="team_members">Team Members</string>
    <string name="abdelrhman_mohmmed_kamel">abdelrhman mohmmed kamel</string>
    <string name="ahmed_gamal_abdelftah">Ahmed gamal abdelftah</string>
    <string name="shema_abdelrady_abdelmanam">Shema abdelrady abdelmanam</string>
    <string name="nesma_biomy_mahmmoud">Nesma biomy mahmmoud</string>
    <string name="amir_ahmed_abdelhmed">Amir ahmed abdelhmed</string>
    <string name="mohmmed_zakria_abdelazem">Mohmmed zakria abdelazem</string>
    <string name="mohmmed_abdelhakem_abdelzaher">Mohmmed abdelhakem abdelzaher</string>
    <string name="order_description">Order Description</string>
    <string name="upload">Upload</string>
    <string name="order_name">Order Name</string>
    <string name="order_price">Order Price</string>
    <string name="book_table">Book Table</string>
    <string name="select_date_and_time">Select Date and time</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="persons_count">Persons Count</string>
    <string name="request">Request</string>
    <string name="total_price_is">Total Price is :</string>
    <string name="total_bill_price_is">Total bill Price is :</string>
    <string name="difference_bill_price_and_sales_price_is">difference bill Price and sales price is :</string>
    <string name="welcome">Welcome</string>
    <string name="order_now">Order Now</string>
    <string name="email_address">Email address :</string>
    <string name="address">Address             :</string>
    <string name="support">Support</string>
    <string name="report">Report</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="update_your_information">Update your Information</string>
    <string name="update">Update</string>
    <string name="login">Login</string>
    <string name="name">Name:</string>
    <string name="Date">Date:</string>
    <string name="Time">Time:</string>
    <string name="email">Email:</string>
    <string name="tables">Tables:</string>
    <string name="are_you_sure_to_delete_this_order">Are you sure to delete this Order</string>
    <string name="location">Location</string>
    <string name="write_the_report_now">Write the report now</string>
    <string name="write_what_do_you_want">write what do you want</string>
    <string name="done">Done</string>
    <string name="rate_this_meal">Rate this meal</string>
    <string name="rate_now">Rate Now</string>
    <string name="are_you_sure_to_add_this_order_to_sales">Are you sure to Add this Order to Sales</string>
    <string name="add_to_sales">Add to sales</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description :</string>
    <string name="price">price :</string>
    <string name="go_to_menu">Go to menu</string>
    <string name="Description">Description:</string>
    <string name="Location">Location:</string>
    <string name="price_is">Price is :</string>
    <string name="status_is">Status is :</string>
    <string name="delete_from_seals">Delete from seals</string>
    <string name="accept_order">Accept Order</string>
    <string name="reject_order">Reject Order</string>
    <string name="delete_item">Delete item</string>
    <string name="admin">admin</string>
    <string name="user">user</string>
    <string name="table">table</string>

    <string name="block_user">block User</string>
    <string name="make_him_admin">Make him admin</string>
    <string name="delete_him">delete him</string>
    <string name="do_you_want_to_order_this_order_now">Do you Want to Order this Order Now</string>
    <string name="total_of_order_is">Total of Order is</string>
    <string name="count">count:</string>
</resources>
