<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_background"
    >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:text="@string/update_your_information"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/user_name"
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                android:textColorHint="#CCC8C8"
                android:backgroundTint="@color/whiteColor"/>

            <EditText
                android:id="@+id/txt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/address"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textColorHint="#CCC8C8"
                android:backgroundTint="@color/whiteColor"/>

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                android:textColorHint="#CCC8C8"
                android:backgroundTint="@color/whiteColor"/>

            <EditText
                android:id="@+id/txt_confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                android:textColorHint="#CCC8C8"
                android:backgroundTint="@color/whiteColor"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/update"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_style"
                    android:padding="10dp"
                    android:text="@string/update"
                    android:textAlignment="center"
                    android:textColor="@color/whiteColor"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"/>
            </LinearLayout>

        </LinearLayout>

</LinearLayout>