<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"

    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:textStyle="bold"
                android:text="@string/write_the_report_now"
                android:textSize="18sp"
                android:textColor="#000"
                />


        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="55dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/write_what_do_you_want"
                android:textStyle="bold"
                android:layout_marginHorizontal="20dp"
                android:id="@+id/editTextReportDescription"
                />
            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:layout_marginVertical="5dp"
                android:background="@drawable/button_style"
                android:id="@+id/btn_sen_report"
                android:layout_marginHorizontal="5dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>