<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_background"

    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:text="@string/book_table"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="50dp"
        >

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:src="@drawable/restaurant_logo"/>
        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/select_date_and_time"
            android:gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:textSize="15dp"
            android:textColorHint="#CCC8C8"
            android:backgroundTint="@color/whiteColor"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_access_time_black_24dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:id="@+id/image_time"
                    />

                <EditText
                    android:id="@+id/txt_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/whiteColor"
                    android:hint="@string/time"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#CCC8C8"
                    android:textSize="15dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_date_range_black_24dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:id="@+id/image_date"/>
                <EditText
                    android:id="@+id/txt_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/date"
                    android:textColor="#FFFFFF"
                    android:textSize="15dp"
                    android:inputType="number"
                    android:textColorHint="#CCC8C8"
                    android:backgroundTint="@color/whiteColor"/>
            </LinearLayout>
        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_group_black_24dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:id="@+id/image"/>
            <EditText
                android:id="@+id/txt_person_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="10dp"
                android:hint="@string/persons_count"
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                android:inputType="number"
                android:textColorHint="#CCC8C8"
                android:backgroundTint="@color/whiteColor"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/update"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/button_style"
                android:padding="10dp"
                android:text="@string/request"
                android:textAlignment="center"
                android:textColor="@color/whiteColor"
                android:textSize="15dp"
                android:textStyle="bold"
                android:gravity="center_horizontal"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>