<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/first_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginHorizontal="2dp"
        android:layout_marginVertical="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    >
                    <LinearLayout
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="20dp"
                                android:textStyle="bold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/name"
                                android:textSize="13dp"
                                android:textColor="#000"
                                android:layout_marginBottom="5dp"
                                android:id="@+id/name"
                                />
                            <TextView
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="20dp"
                                android:textStyle="bold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Name"
                                android:textSize="13dp"
                                android:textColor="#000"
                                android:layout_marginBottom="5dp"
                                android:id="@+id/text_user_name"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="20dp"
                                android:textStyle="bold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Description"
                                android:textSize="13dp"
                                android:textColor="#000"
                                android:layout_marginBottom="5dp"
                                android:id="@+id/email"

                                />
                            <TextView
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="20dp"
                                android:textStyle="bold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="des"
                                android:textSize="13dp"
                                android:textColor="#000"
                                android:layout_marginBottom="5dp"
                                android:id="@+id/description_item"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="20dp"
                                android:textStyle="bold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Location"
                                android:textSize="13dp"
                                android:textColor="#000"
                                android:layout_marginBottom="5dp"
                                android:id="@+id/location"

                                />
                            <TextView
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="20dp"
                                android:textStyle="bold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="None"
                                android:textSize="13dp"
                                android:textColor="#000"
                                android:layout_marginBottom="5dp"
                                android:id="@+id/location_item"
                                />
                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"

                        />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/price_is"
                            android:layout_marginTop="5dp"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/status_is"
                            android:layout_marginTop="5dp"

                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginHorizontal="10dp"
                        >


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/price_item"
                            android:text="2000.5"
                            android:layout_marginTop="5dp"

                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/status_item"
                            android:text="2000.5"
                            android:layout_marginTop="5dp"

                            />

                    </LinearLayout>




                </LinearLayout>

                <TextView
                    android:text="@string/delete_from_seals"
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="10dp"
                    android:id="@+id/delete_item"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:background="@drawable/button_style"
                    android:gravity="center_horizontal|center_vertical"
                    android:visibility="gone"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginVertical="5dp">
                <Button
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_style"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/accept_order"
                    android:id="@+id/accept_btn"
                    android:visibility="gone"
                    />
                <Button
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_style"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/reject_order"
                    android:id="@+id/reject_btn"
                    android:visibility="gone"
                    />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>


    </androidx.cardview.widget.CardView>
</LinearLayout>